Fixed task photo show on Not Covered tasks.

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -263,6 +263,10 @@ li.covered {
     }
   }
 
+  .updates {
+    margin-bottom: 10px;
+  }
+
   select {
   #task_start_time, #start_time_hour, #start_time_minute {
     .form-control {
